--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ali Tarik Sahin",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.3",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
